# soca

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/mbedtls/: dtls_client.cpp  dtls_server.cpp
examples/posix/: async_tcp_client.cpp  endpoint_ipv6.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
libs/: dtls_client.cpp  dtls_client.hpp  dtls_server.cpp  dtls_server.hpp  error.cpp  error.hpp  port.hpp
libs/posix/: endpoint_ip.hpp  endpoint_ipv4.hpp  endpoint_ipv6.hpp  esp_idf.hpp  functions.cpp  functions.hpp  port.hpp  tcp_client.hpp  tcp_server.hpp  udp_socket.hpp  unix.hpp  windows.hpp
libs/posix/impl/: functions_impl.hpp  tcp_client_impl.hpp  tcp_server_impl.hpp  udp_socket_impl.hpp
